--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.4.0",
-    "readline": "^1.3.0"
+    "moment": "^2.29.1",
+    "moment-precise-range-plugin": "^1.3.0",
+    "readline": "^1.3.0",
+    "timer": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
