--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.4.0",
-    "readline": "^1.3.0"
+    "inquirer": "^8.2.0",
+    "lazy": "^1.0.11",
+    "readline": "^1.3.0",
+    "socket.io": "^4.3.1",
+    "yargs": "^17.2.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
